完善活动成员、评论api
